add css e login

--- a/OneDrive/Área de Trabalho/CP-2/Sobre.html
+++ b/OneDrive/Área de Trabalho/CP-2/Sobre.html
@@ -6,6 +6,18 @@
     <title>Vinhacity</title>
 </head>
 <body>
-    
+    <form id="form"> 
+        <h1>Registro de usuário </h1>
+        <h2>Nome</h2>
+        <input id="nome" type="text">
+        <h2>Telefone</h2>
+        <input id="telefone" type="number">
+        <h2>Email</h2>
+        <input id="email" type="email">
+        <button id="botao" type="submit">Enviar</button>
+    </form>
+
+
+    <script src="sobre.js"></script>
 </body>
 </html>
