--- a/OneDrive/Área de Trabalho/CP-2/index.html
+++ b/OneDrive/Área de Trabalho/CP-2/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinhacity</title>
+    <link rel="stylesheet" href="./asstes/css/index.css">
+
 </head>
 <body>
     <form id="form"> 
@@ -23,5 +25,5 @@
     
 
     <script src="index.js"></script>
-</body>
+    
 </html>
