--- a/OneDrive/Área de Trabalho/CP-2/index.html
+++ b/OneDrive/Área de Trabalho/CP-2/index.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" href="./asstes/css/index.css">
 
 </head>
+
+
 <body>
+    <header>
+        <a href="index.html">
+            home
+        </a>
+        <a href="Sobre.html">
+            sobre
+        </a>
+        <a href="quiz.html">
+            quiz
+        </a>
+        <a href="contato.html">
+            contato
+        </a>
+    </header>
     <form id="form"> 
         <h1>Registro de usuário </h1>
         <h2>Nome</h2>
